src/test/ui/resolve/issue-3907-2.stderr
error[E0038]: the trait `issue_3907::Foo` cannot be made into an object
  --> $DIR/issue-3907-2.rs:11:1
   |
LL | fn bar(_x: Foo) {}
   | ^^^^^^^^^^^^^^^ the trait `issue_3907::Foo` cannot be made into an object
   |
   = note: method `bar` has no receiver

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
